fix z-index loader

--- a/src/components/Element/custom-m-loader.css
+++ b/src/components/Element/custom-m-loader.css
@@ -5,7 +5,7 @@
     bottom: -30px;
     left: -30px;
     right: -30px;
-    z-index: 1;
+    z-index: 120;
     content: "";
 }
 .m-loader.m-loader--div:before {
